--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-image-gallery": "^1.4.0",
     "react-scripts": "5.0.1",
     "react-svg": "^16.3.0",
     "styled-components": "^6.1.16",
