--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-image-gallery": "^1.4.0",
     "react-scripts": "5.0.1",
     "react-svg": "^16.3.0",
+    "react-youtube": "^10.1.0",
     "styled-components": "^6.1.17",
     "web-vitals": "^2.1.4"
   },
