--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "leaflet": "^1.9.4",
+    "react": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0-rc.1",
     "react-icons": "^5.5.0",
     "react-image-gallery": "^1.4.0",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-scripts": "5.0.1",
     "react-svg": "^16.3.0",
     "react-youtube": "^10.1.0",
